<resources>
    <string name="app_name">MundoFit-App</string>
    <string name="ErrorMsgAdd">Error al Agregar</string>
    <string name="ErrorMsgUpdate">Error al Actualzar</string>
    <string name="ErrorMsgRemove">Error al Eliminar</string>
    <string name="ErrorMsgGetAll">Error al Obtener la Lista de Datos</string>
    <string name="ErrorMsgGetByid">Error al Obtener Dato Especifico</string>
    <string name="ErrorMsgDataNoFound">El Dato no fue encontrado</string>
    <string name="ErrorMsgAddPhoto">Error al agregar la foto</string>
    <string name="ErrorMsgUpdatePhoto">Error al actualizar la foto</string>
    <string name="ErrorMsgDeletePhoto">Error al eliminar la foto</string>
    <string name="ButtonLogin">Iniciaar Sesion</string>
    <string name="ButtonSignIN">Registrarse</string>
    <string name="EnterInformatiom">Ingrese su Informacion</string>
    <string name="EnterId">ID</string>
    <string name="EnterName">Nombre</string>
    <string name="EnterFullLasName">Apellidos</string>
    <string name="EnterNacionality">Nacionalidad</string>
    <string name="EnterAge">Edad</string>
    <string name="EnterGender">Genero</string>
    <string name="EnterWeight">Peso</string>
    <string name="ButtonRegister">Aceptar</string>
    <string name="TextMenu">¿Como Quieres Empezar?</string>

    <string name="TextYes">Sí</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Confirmación</string>
    <string name="TextSaveActionQuestion">¿Desea guardar los cambios?</string>
    <string name="TextDeleteActionQuestion">¿Desea eliminar este usuario?</string>
    <string name="MsgSaveSuccess">¡Guardado con éxito!</string>
    <string name="MsgDeleteSuccess">Usuario eliminado correctamente</string>
    <string name="MsgDuplicateDate">Ya existe un usuario con esta cédula</string>
    <string name="MsgDataNoFound">Usuario no encontrado</string>
</resources>